--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <body>
     <github>
       <a href="https://github.com/" style="text-decoration: none;">
-        <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
+        <img src="https://lucas-0714.github.io/db/icon/github.png" alt="GitHub" style="height:35px;">
       </a>
       <a href="https://pages.github.com/" style="text-decoration: none;">
-        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;">
+        <img src="https://lucas-0714.github.io/db/icon/github-pages.png" alt="GitHub Pages" style="height:35px;">
       </a>
     </github>
     <header style="text-align:right;font-size:2vw;text-decoration: none;" class="flex; sticky-text">
