--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </language>
         <space>&nbsp;&nbsp;</space>
         <a href="https://lucas-0714.github.io/login/login.html" style="text-decoration:none;">
-          <img src="https://i.imgur.com/R5QkQDk.png" alt="login" style="width:2vw">
+          <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=language" />
         </a>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
